<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/refresh"
        android:icon="@android:drawable/stat_sys_download"
        android:title="@string/refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/settings"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        android:title="Settings"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/sortByName"
                android:title="@string/sort_by_name" />
            <item
                android:id="@+id/sortByMarketCap"
                android:title="@string/sort_by_market_cap" />
            <item
                android:id="@+id/sortByQuantity"
                android:title="@string/sort_by_quantity" />
            <item
                android:id="@+id/sortByValue"
                android:title="@string/sort_by_value" />
        </menu>

    </item>

</menu>