<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/inputMessagePre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_amount_pre"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data_error"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/inputMessagePost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_amount_post"
            android:textAlignment="center"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/inputLayout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/quantityInput"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/symbolText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/no_data_error" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8px"
                android:layout_weight="1"
                android:background="#F44336"
                android:text="@string/back"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8px"
                android:layout_weight="1"
                android:background="#4CAF50"
                android:text="@string/save"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>